# asteroids

./: .gitignore  Cargo.toml  LICENSE  README.md  build-android.sh  build-web.sh  build.rs  deploy.env.example  deploy.sh  index.html
.cargo/: config.toml
android/: Dockerfile
src/: asteroid.rs  build_info.rs  bullet.rs  camera.rs  controls.rs  game.rs  input.rs  layout.rs  main.rs  screen.rs  ship.rs  start_screen.rs  text.rs  transition.rs  vec_util.rs
src/game/: asteroid.rs  bullet.rs  ship.rs
